src/test/deca/context/valid/24_while.deca
// Description:
//    test d'une boucle while pour la synthaxe contextuelle.
//
// Historique:
//    cree le 16/01/2022

{
    int x = 0;
    while(x<5){
        x = x+1;
    }
    print(x);
}
