src/test/deca/context/invalid/51_ProtectedField.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 16: ContextualError: can't access to protected field x
// 
// Historique:
//    cree le 01/01/2022

class A {
	protected int x = 1;
}
{
   A a = new A();
   // Doit etre refuse.
   int x = a.x;
}
